[package]
name = "skarfhttp"
version = "0.1.0"
authors = ["Andrew McConachie <andrew@depht.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = { version = "0.7", features = ["tokio"] }
ctrlc = { version = "3.0", features = ["termination"] }
etherparse = "^0.8.2"
env_logger = "^0.6.1"
log = "^0.4.0"
parking_lot = "^0.8.0"
ipaddress = "^0.1.2"
clap = "^2.3.0"
